--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,7 @@
 server.servlet.context-path=/api
 server.port=8085
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.datasource.url=jdbc:mysql://localhost:3310/researchdb
+spring.datasource.url=jdbc:mysql://localhost:3310/demodb
 spring.datasource.username=user
 spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
